# CppGL

./: CMakeLists.txt  README.md
examples/: draw-cube-on-cube.cpp  draw-cubes.cpp  draw-gltf.cpp  gltf-cube.cpp  rainbow-triangle.cpp  texture-triangle.cpp  utils.h
includes/CppGL/: api.h  buffer.h  constant.h  data-type.h  debug.h  global-state.h  math.h  program.h  rttr.h  shader.h  vertex-array.h
src/: api.cpp  draw-cube-on-cube.cpp  draw-cubes.cpp  global.cpp  helper.cpp  main.cpp  math.cpp  rainbow-triangle.cpp  rttr.h  shader.cpp  texture-triangle.cpp  utils.h
src/CppGL/: api.h  attribute.h  buffer.h  constant.h  data-type.h  global-state.h  marco.h  math.h  program.h  shader.h  texture.h  uniform.h  vertex-array.h
